fixed an overflow issue

--- a/styles/base-classes.scss
+++ b/styles/base-classes.scss
@@ -742,7 +742,7 @@ nav {
 }
 
 .formModal {
-   overflow: scroll;
+   overflow-y: scroll;
    position: fixed;
    height: 100vh;
    width: 100%;
